Adding HTML changes to the Repo that  outline basic structure

--- a/index.html
+++ b/index.html
@@ -6,8 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music project</title>
+    <!--- Add fondation link: SN-->
+    <link rel="StyleSheet" href="./assets/style.css"/>
 </head>
 <body>
-    
+    <div>
+        <section class="header">
+            <h1>Music Project</h1>  
+            <nav>    
+    <!--Unstyle li bullet point: SN-->
+                    <ul>
+                        <li>
+                            <button type="button" href="https://www.youtube.com/">
+                        </li>
+                        <li>
+                            <button type="button"href="https://music.apple.com/us/browse">
+                        </li>
+                        <li>
+                            <button type="button"href="https://open.spotify.com/">
+                        </li>
+                    </ul>
+            </nav>
+        </section>
+    </div>
+    <!-- Possibly coming from bootsrap library, need to look for it in Foundatioin (Bootstrap Utilities Module 5-16): SN-->
+    <div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-3">
+    <!-- Limit search result to 5 SN-->
+            <div form="Search Bar">
+        </div>
+        <div>
+    <!--List that retrurns search result SN-->         
+    </div>
+    <div>
+    <!-- Image of Album Cover div from API to embed SN--> 
+    <!-- Play button interface nested insdie "album cover" div SN"-->
+    <div>
+        <ul>
+    <!-- List items append local storage items from search bar SN-->        
+            <li>"Search 1"</li>
+            <li>"Search 2"</li>
+            <li>"Search 3"</li>
+            <li>"Search 4"</li>
+            <li>"Search 5"</li>   
+        </ul>
+    </div>
+    </div>
+        <button type="button"></button>
+    </div>
+</div>
+
+
+
+    <link rel="JavaScript" href="./assets/script.js"/>
 </body>
 </html>
