--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music project</title>
-    <!--- Add fondation link: SN-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
     <link rel="StyleSheet" href="./assets/style.css"/>
 </head>
 <body>
-    <div>
-        <section class="header">
-            <h1>Music Project</h1>  
-            <nav>    
-    <!--Unstyle li bullet point: SN-->
-                    <ul>
-                        <li>
-                            <button type="button" href="https://www.youtube.com/">
-                        </li>
-                        <li>
-                            <button type="button"href="https://music.apple.com/us/browse">
-                        </li>
-                        <li>
-                            <button type="button"href="https://open.spotify.com/">
-                        </li>
-                    </ul>
-            </nav>
+    <nav>
+    <div class="top-bar">
+        <div class="top-bar-left">
+            <ul id="navButtons">
+            <li class="menu-text">Music Project</li>
+            <li>
+                <button class="button primary" id="youTubeBtn" type="button" href="https://www.youtube.com/">YouTube</button>
+            </li>
+            <li>
+                <button class="button primary" id="appleMusicBtn" type="button"href="https://music.apple.com/us/browse">Apple Music</button>
+            </li>
+            <li>
+                <button class="button primary" id="spotifyBtn" type="button" href="https://open.spotify.com/">Spotify</button>
+            </li>
+          </ul>
+        </div>
+    </div>    
+    </nav>
         </section>
     </div>
     <!-- Possibly coming from bootsrap library, need to look for it in Foundatioin (Bootstrap Utilities Module 5-16): SN-->
