Updated classes and styling for our nav buttons

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <ul id="navButtons">
             <li class="menu-text">Music Project</li>
             <li>
-                <button class="button primary" id="youTubeBtn" type="button" href="https://www.youtube.com/">YouTube</button>
+                <button class="button primary mystyles" id="youTubeBtn" type="button" href="https://www.youtube.com/">YouTube</button>
             </li>
             <li>
-                <button class="button primary" id="appleMusicBtn" type="button"href="https://music.apple.com/us/browse">Apple Music</button>
+                <button class="button primary mystyles" id="appleMusicBtn" type="button"href="https://music.apple.com/us/browse">Apple Music</button>
             </li>
             <li>
-                <button class="button primary" id="spotifyBtn" type="button" href="https://open.spotify.com/">Spotify</button>
+                <button class="button primary mystyles" id="spotifyBtn" type="button" href="https://open.spotify.com/">Spotify</button>
             </li>
           </ul>
         </div>
