--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <nav>
+<div class="container"> <!-- Enveloped whole page in a container to be able to manipulate better --vm -->
     <div class="top-bar">
         <div class="top-bar-left">
             <ul id="navButtons">
@@ -57,9 +58,10 @@
         <button type="button"></button>
     </div>
 </div>
-
+</div>
 
 
     <script src="./assets/script.js"></script>
+    <script src="https://genius.codes"></script>
 </body>
 </html>
