--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="top-bar-left">
             <ul id="navButtons">
             <li class="menu-text">Music Project</li>
-            <li>
+                <li>
                 <button class="button primary mystyles" id="youTubeBtn" type="button" href="https://www.youtube.com/">YouTube</button>
             </li>
-            <li>
+                <li>
                 <button class="button primary mystyles" id="appleMusicBtn" type="button"href="https://music.apple.com/us/browse">Apple Music</button>
             </li>
-            <li>
+                <li>
                 <button class="button primary mystyles" id="spotifyBtn" type="button" href="https://open.spotify.com/">Spotify</button>
             </li>
           </ul>
@@ -37,7 +37,7 @@
     <!-- Limit search result to 5 SN-->
             <div form="Search Bar">
         </div>
-        <div>
+        <div class = "">
     <!--List that retrurns search result SN-->         
     </div>
     <div>
