--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <p class= "bio">Search for any song lyric and get the song title in return.</p>   
     <section>
         <div class ="container">
-            <input type="text" class="searchBar" placeholder="Search..." >
-            <button class="button primary" id="searchBtn" type="button">Search</button>
+            <input id="search-field" type="text" class="search-bar" placeholder="Search..." >
+            <button class="button primary" id="search-btn" type="button">Search</button>
         </div>   
         <div class="card" style="width: 33%;">
             <div class="card-divider">
@@ -36,7 +36,7 @@
             <div class="card-section">
                 <p class="details">You can find your music library below:</p>
               <!-- List items append local storage items from search bar SN--> 
-            <ol class="searchResults">      
+            <ol class="search-results">      
                 <li>"Search 1"</li>
                 <li>"Search 2"</li>
                 <li>"Search 3"</li>
@@ -51,7 +51,7 @@
         &copy; UW Coding Bootcamp Project 1: Alfredo Rodriguez | Vadim Merenovskiy | Stephen Novelli | 2022
     </section>
     <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>
-    <script src="https://genius.codes"></script>
 </body>
 </html>
