--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <section class="header">
         <nav>
             <h1>Music Search Engine</h1>
-            <button class="button primary mystyles" id="youTubeBtn" type="button" href="https://www.youtube.com/">YouTube</button>
+            <button class="button primary mystyles" id="youtube-btn" type="button" href="https://www.youtube.com/">YouTube</button>
             <iconify-icon icon="logos:youtube"></iconify-icon>
-            <button class="button primary mystyles" id="appleMusicBtn" type="button"href="https://music.apple.com/us/browse">Apple Music</button>
+            <button class="button primary mystyles" id="apple-music-btn" type="button"href="https://music.apple.com/us/browse">Apple Music</button>
             <iconify-icon icon="cib:apple-music"></iconify-icon>
-            <button class="button primary mystyles" id="spotifyBtn" type="button" href="https://open.spotify.com/">Spotify</button>
+            <button class="button primary mystyles" id="spotify-btn" type="button" href="https://open.spotify.com/">Spotify</button>
             <iconify-icon icon="logos:spotify-icon"></iconify-icon>
            
         </nav>
@@ -37,7 +37,7 @@
                 <p class="details">You can find your music library below:</p>
               <!-- List items append local storage items from search bar SN--> 
             <ol class="search-results">      
-                <li>"Search 1"</li>
+                <li class="results"></li>
                 <li>"Search 2"</li>
                 <li>"Search 3"</li>
                 <li>"Search 4"</li>
