Updated the buttons for streaming services and fixed some on page styling

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             
         </nav>
     </section> 
-    <p class= "bio">Search for any song lyric and get the song title in return.</p>   
+    <p class= "bio">Search for a string of song lyrics and get song titles in return.</p>   
     <section>
         <div class ="container">
-            <input type="text" class="search-bar" placeholder="Search..." >
+            <input type="text" id="search-field" class="search-bar" placeholder="Search..." >
             <button class="button primary" id="search-btn" type="button">Search</button>
         </div>   
         <div class="card" style="width: 33%;">
@@ -31,14 +31,14 @@
               Search Results
             </div>
             <div class="card-section">
-                <p class="details">You can find your music library below:</p>
+                <p class="details">You can find your song results here. Just click your preferred streaming service at the top right of this page to find your song and begin listening.</p>
               <!-- List items append local storage items from search bar SN--> 
             <ol class="search-results">      
                 <li>"Search 1"</li>
                 <li>"Search 2"</li>
                 <li>"Search 3"</li>
                 <li>"Search 4"</li>
-                <li>"Search 5"</li> 
+                <li>"Search 5"</li>    
             </ol>
             </div>
     </section>    
