js updated-looped

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             <div class="card-section">
                 <p class="details">You can find your music library below:</p>
               <!-- List items append local storage items from search bar SN--> 
-            <ol class="search-results">      
-                <li class="results"></li>
-                
+            <ol class="search-results" id="results"> 
             </ol>
             </div>
     </section>    
