--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <div class="card-section">
                 <p class="details">You can find your song results here. Just click your preferred streaming service at the top right of this page to find your song and begin listening.</p>
               <!-- List items append local storage items from search bar SN--> 
-            <ol class="search-results" id="results">      
-            </ol>
+            <ol class="search-results" id="results"></ol>
             </div>
     </section>    
 
