--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Search Engine</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" alt="Picture of a blended red and black music note.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
-    <link rel="StyleSheet" href="./assets/style.css"/>
+    <link rel="StyleSheet" href="./assets/css/style.css"/>
 </head>
 <body>
     <section class="header">
@@ -45,9 +45,9 @@
 
     <section class="footer">  
     <hr>
-        &copy; UW Coding Bootcamp Project 1: Alfredo Rodriguez | Vadim Merenovskiy | Stephen Novelli | 2022
+        &copy; UW Coding Bootcamp Project 1:<a href="https://github.com/AlfredRodr"  target="_blank"> Alfredo Rodriguez</a> | <a href="https://github.com/RunninFridge"  target="_blank">Vadim Merenovskiy</a> | <a href="https://github.com/snovelli1021"  target="_blank">Stephen Novelli</a> | 2022
     </section>
     <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
