--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Search Engine</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" alt="Picture of a blended red and black music note.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
-    <link rel="StyleSheet" href="./assets/style.css"/>
+    <link rel="StyleSheet" href="./assets/css/style.css"/>
 </head>
 <body>
     <section class="header">
@@ -23,15 +23,7 @@
     <p class= "bio">Search for a string of song lyrics and get song titles in return.</p>   
     <section>
         <div class ="container">
-<<<<<<< HEAD
-<<<<<<< HEAD
             <input type="text" id="search-field" class="search-bar" placeholder="Search..." >
-=======
-            <input type="text" class="search-bar" placeholder="Search..." >
->>>>>>> cb93051 (Made changes to HTML id and class names, added JavaScript to return song lyrics)
-=======
-            <input type="text" id="search-field" class="search-bar" placeholder="Search..." >
->>>>>>> 65bd263 (Updated the buttons for streaming services and fixed some on page styling)
             <button class="button primary" id="search-btn" type="button">Search</button>
         </div>   
         <div class="card" style="width: 33%;">
@@ -41,23 +33,13 @@
             <div class="card-section">
                 <p class="details">You can find your song results here. Just click your preferred streaming service at the top right of this page to find your song and begin listening.</p>
               <!-- List items append local storage items from search bar SN--> 
-<<<<<<< HEAD
             <ol class="search-results" id="results"></ol>
-=======
-            <ol class="search-results">      
-                <li>"Search 1"</li>
-                <li>"Search 2"</li>
-                <li>"Search 3"</li>
-                <li>"Search 4"</li>
-                <li>"Search 5"</li>    
-            </ol>
->>>>>>> cb93051 (Made changes to HTML id and class names, added JavaScript to return song lyrics)
             </div>
     </section>    
 
     <section class="footer">  
     <hr>
-        &copy; UW Coding Bootcamp Project 1: Alfredo Rodriguez | Vadim Merenovskiy | Stephen Novelli | 2022
+        &copy; UW Coding Bootcamp Project 1:<a href="https://github.com/AlfredRodr"  target="_blank"> Alfredo Rodriguez</a> | <a href="https://github.com/RunninFridge"  target="_blank">Vadim Merenovskiy</a> | <a href="https://github.com/snovelli1021"  target="_blank">Stephen Novelli</a> | 2022
     </section>
     <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
