--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Music Search Engine</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" alt="Picture of a blended red and black music note.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="StyleSheet" href="./assets/css/style.css"/>
 </head>
 <body>
